syntax = "proto3";

package property_group;

option go_package = "./prop_group;prop_group_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "trans.proto";
import "_category_preview.proto";
import "_property.proto";

service PropertyGroupService {
    rpc getGroupPrivate (PropertyGroupSearchParams) returns (PropertyGroup);
    rpc getGroupListPrivate (PropertyGroupListSearchParams) returns (PropertyGroupList);
    rpc getGroupListPrivateByCategory (PropertyGroupListByCategorySearchParams) returns (PropertyGroupList);
    rpc getGroupListPrivateByProperties (property.PropertyListSearchParams) returns (PropertyGroupList);
    rpc createGroup (PropertyGroupCU) returns (PropertyGroup);
    rpc updateGroup (PropertyGroupUpdateParams) returns (google.protobuf.Empty);
    rpc deleteGroup (PropertyGroupSearchParams) returns (google.protobuf.Empty);
}

service PropertyService {
    rpc createProperty(property.PropertyCU) returns (property.Property);
    rpc getPropertyList(property.PropertyListSearchParams) returns (property.PropertyList);
    rpc deleteProperty(property.PropertySearchParams) returns (google.protobuf.Empty);
}

// entities

message PropertyGroup {
    int32 id = 1;
    trans.TransData title = 2;
    string altName = 3;
    bool isPrimary = 4;
    string comment = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
    repeated property.Property properties = 8;
    repeated category_preview.CategoryPreview categories = 9; // circular dependency
}

// entities

message PropertyGroupPreview {
    int32 id = 1;
    trans.TransData title = 2;
    string altName = 3;
    bool isPrimary = 4;
    string comment = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
    repeated property.Property properties = 8;
}

// requests

message PropertyGroupCU {
    trans.TransData title = 1;
    string altName = 2;
    bool isPrimary = 3;
    string comment = 4;
}

message PropertyGroupSearchParams {
    int32 id = 1;
}

message PropertyGroupListSearchParams {
    repeated int32 ids = 1;
}

message PropertyGroupUpdateParams {
    int32 id = 1;
    PropertyGroupCU data = 2;
}

message PropertyGroupListByCategorySearchParams {
    int32 id = 1;
}

// responces

message PropertyGroupList {
    repeated PropertyGroupPreview items = 1;
}
